examples/test/testpolicy18398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18398
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key41: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value45
      podSelector:
        matchLabels:
          key43: value5
          key49: value12
          key15: value17
